# cognirepo

./: .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  FEATURE.md  ISSUES.md  LANGUAGES.md  LICENSE  METRICS.md  Makefile  NOTICE  README.md  SECURITY.md  SPRINT.md  TEST_SUITE.md  USAGE.md  docker-compose.yml  plan.md  pyproject.toml  requirements.txt  test.md  test_cognirepo.py  test_logs.md  test_output.tmp
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docker.yml  lint.yml  publish.yml  pylint.yml  security.yml
STD_PROMPTS/: claude_mcp.md  copilot_instructions.md  cursor_rules.mdc  gemini_mcp.md
_bm25/: CMakeLists.txt  __init__.py  _fallback.py  bindings.cpp  bm25.cpp  bm25.hpp
adapters/: __init__.py  cursor_mcp_config.json  openai_spec.py  openai_tools.json
api/: auth.py  cache.py  main.py  metrics.py  middleware.py  middleware_metrics.py  middleware_ratelimit.py  middleware_tracing.py  rate_limit.py
api/routes/: episodic.py  graph.py  memory.py  status.py
cli/: README.md  __init__.py  api_client.py  cli_config.py  daemon.py  docs_index.py  env_wizard.py  init_project.py  key_probes.py  main.py  metrics_server.py  migrate_config.py  plan_helper.md  release_check.py  repl.py  root_cause_analysis.md  seed.py  wizard.py
cli/repl/: __init__.py  agents_panel.py  commands.py  shell.py  ui.py
config/: README.md  __init__.py  lock.py  logging.py  orgs.py  paths.py
cron/: README.md  probes.py  prune_memory.py  scheduler.py
deploy/grafana/: cognirepo.json
docs/: ARCHITECTURE.md  CLI.md  CLI_REFERENCE.md  CONFIGURATION.md  CONTRIBUTING.md  DEVELOPER_GUIDE.md  FEATURES.md  MCP_TOOLS.md  METRICS.md  SECURITY.md  TESTING.md  TROUBLESHOOTING.md  USAGE.md  auth.md  setup.md
docs/architecture/: SPECIFICATION.md  graph.md  retrieval.md
docs/architecture/diagrams/: data-flow.mmd  multi-agent.mmd  retrieval-pipeline.mmd  system-overview.mmd
graph/: behaviour_tracker.py  graph_utils.py  knowledge_graph.py  org_graph.py
indexer/: ast_indexer.py  doc_ingester.py  file_watcher.py  index_utils.py  inter_repo_indexer.py  language_registry.py  summarizer.py
memory/: README.md  auto_store.py  circuit_breaker.py  cleanup_queue.py  embeddings.py  episodic_memory.py  learning_store.py  project_memory.py  semantic_memory.py  user_memory.py
myapp/: auth.py  utils.py
orchestrator/: __init__.py  classifier.py  context_builder.py  router.py  session.py
orchestrator/model_adapters/: __init__.py  anthropic_adapter.py  errors.py  gemini_adapter.py  grok_adapter.py  local_adapter.py  openai_adapter.py  retry.py
retrieval/: README.md  cross_repo.py  docs_search.py  hybrid.py  query_enhancer.py  vector_search.py
rpc/: client.py  context_store.py  server.py
rpc/proto/: cognirepo.proto  cognirepo_pb2.py  cognirepo_pb2_grpc.py
scripts/: build_diagrams.sh  check-workflows-local.sh  check_no_stdout_pollution.py  check_wheel.sh  release_checklist.md  run_tests.sh  smoke_test.ps1  smoke_test.sh
security/: __init__.py  encryption.py
server/: README.md  idle_manager.py  learning_middleware.py  manifest.json  mcp_server.py  metrics.py  session_listener.py
tests/: __init__.py  conftest.py  test_adapters.py  test_agents_panel.py  test_api.py  test_api_cache.py  test_benchmark_metrics.py  test_bm25.py  test_cache.py  test_ci_security.py  test_circuit_breaker_probes.py  test_classifier.py  test_claude_usefulness.py  test_cli_config.py  test_cli_daemon.py  test_config_migration.py  test_context_builder.py  test_context_pack.py  test_coverage_boost.py  test_coverage_extended.py  test_cross_agent_recall.py  test_cross_repo.py  test_cursor_vscode.py  test_daemon_reliability.py  test_dependency_graph.py  test_docs_index.py  test_docs_sync.py  test_doctor.py  test_doctor_expanded.py  test_documentation.py  test_e2e_init.py  test_encryption.py  test_env_wizard.py  test_episodic_search.py  test_explain_change.py  test_fallback_chain.py  test_fresh_install.py  test_ftx.py  test_graph.py  test_grpc_health.py  (+41 more)
tests/fixtures/: benchmark_golden.json  benchmark_golden_ansible.json  benchmark_golden_celery.json  benchmark_golden_fastapi.json  benchmark_golden_flask.json
tools/: README.md  behaviour_hook.py  benchmark.py  context_pack.py  dependency_graph.py  explain_change.py  git_utils.py  prime_session.py  retrieve_memory.py  search_docs.py  semantic_search_code.py  store_memory.py  sync_claude_memory.py
vector_db/: README.md  __init__.py  adapter.py  chroma_adapter.py  factory.py  faiss_adapter.py  local_vector_db.py  semantic.index
