[project]
name = "cognirepo"
version = "0.1.0"
description = "Local cognitive infrastructure layer for AI agents"
requires-python = ">=3.11"

dependencies = [
    # core
    "faiss-cpu==1.13.2",
    "numpy==2.4.3",
    "sentence-transformers==5.3.0",
    # MCP server
    "mcp[cli]==1.26.0",
    # REST API
    "fastapi==0.135.2",
    "uvicorn[standard]==0.42.0",
    "python-multipart==0.0.22",
    "starlette==1.0.0",
    # auth
    "PyJWT==2.12.1",
    "bcrypt==5.0.0",
    "passlib[bcrypt]==1.7.4",
    # HTTP client (CLI --via-api)
    "httpx==0.28.1",
    # graph + indexer
    "networkx>=3.3",
    "watchdog>=4.0",
    # shared
    "pydantic==2.12.5",
    "anyio==4.12.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.28",          # for FastAPI TestClient
]

[project.scripts]
cognirepo = "cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["api*", "cli*", "graph*", "indexer*", "memory*", "retrieval*", "server*", "tools*", "vector_db*"]
exclude = ["venv*", "*.egg-info*"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pylint.messages_control]
disable = ["import-error"]
